--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -55,9 +55,9 @@
             <!-- Menu -->
             <div class="classy-menu container-fluid">
               <div class="row">
-                <div class="col-lg-2">
+                <div class="col-lg-3">
                   <a class="logo" href="/">
-                    <img class="img-fluid" src="/assets/core-img/logo.png" alt="">
+                    <img class="img-fluid" src="/assets/core-img/logo2.png" alt="">
                   </a>
                   <!-- Close Button -->
                   <div class="classycloseIcon">
@@ -65,7 +65,7 @@
                   </div>
                 </div>
 
-                <div class="col-lg-7 search-form d-flex align-items-center">
+                <div class="col-lg-5 search-form d-flex align-items-center">
                   <form class="form full-width" action="/recipes" method="get">
                     <div class="input-group">
                       <input class="form-control" type="search" id="topSearch"
@@ -88,7 +88,7 @@
                 </div>
 
                 <!-- Nav Start -->
-                <div class="classynav col-lg-2">
+                <div class="classynav col-lg-3">
                   <!-- <ul>
                     <li><%= link_to("Home", home_url) %></li>
                     <li><a href="#">About Us</a></li>
@@ -130,6 +130,25 @@
     </div>
   </header>
 
+<footer class="footer-area">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <!-- Footer Nav -->
+          <div class="footer-nav">
+            <ul>
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#">Recipes</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
   <%= yield %>
   <!-- ##### Footer Area Start ##### -->
   <footer class="footer-area">
@@ -153,10 +172,10 @@
           <div class="footer-nav">
             <ul>
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#">Recipes</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="recipe">Recipes</a></li>
+              <li><a href="category-post">About Us</a></li>
+              <li><a href="single">Blog</a></li>
+              <li><a href="contact">Contact</a></li>
             </ul>
           </div>
         </div>
