--- a/app/app/assets/stylesheets/style.css
+++ b/app/app/assets/stylesheets/style.css
@@ -518,13 +518,13 @@ h3 {
   .header-area .bueno-main-menu {
     position: relative;
     width: 100%;
-    height: 70px; }
+    height: 50px; }
     .header-area .bueno-main-menu #toggler {
       position: relative;
       z-index: 1;
       cursor: pointer; }
     .header-area .bueno-main-menu .classy-navbar {
-      height: 70px;
+      height: 50px;
       padding: 0; }
       .header-area .bueno-main-menu .classy-navbar .nav-brand {
         max-width: 160px;
@@ -556,7 +556,7 @@ h3 {
       .header-area .bueno-main-menu .login-area a {
         display: inline-block;
         font-weight: 500;
-        color: #7a7a7a;
+        color: #333333;
         font-size: 16px; }
         .header-area .bueno-main-menu .login-area a:hover, .header-area .bueno-main-menu .login-area a:focus {
           color: #b0c364; }
@@ -697,7 +697,7 @@ h3 {
 .hero-area {
   position: relative;
   z-index: 1;
-  padding: 0 30px; }
+  padding: 0 70px; }
   @media only screen and (max-width: 767px) {
     .hero-area {
       padding: 0 15px; } }
@@ -935,7 +935,10 @@ h3 {
 .footer-area {
   position: relative;
   z-index: 1;
-  padding: 50px 0; }
+  padding: 20px 0;
+  border-top: 1px solid;
+  border-bottom: 1px solid; }
+
   .footer-area .copywrite-text {
     font-size: 12px;
     margin-bottom: 0;
@@ -975,7 +978,7 @@ h3 {
       position: relative;
       z-index: 1;
       color: #666666;
-      font-size: 12px;
+      font-size: 15px;
       margin: 0 10px;
       font-weight: 400;
       padding: 0 5px; }
@@ -1741,4 +1744,8 @@ h3 {
 .rate > input:checked ~ label:hover ~ label,
 .rate > label:hover ~ input:checked ~ label {
   color: #c59b08;
+}
+
+.icon1 {
+  padding: 0 10px;
 }
