--- a/app/app/views/template/bueno/receipe.html.erb
+++ b/app/app/views/template/bueno/receipe.html.erb
@@ -76,7 +76,7 @@
 
         <!-- Logo Area -->
         <div class="logo-area">
-            <a href="index.html"><img src="img/core-img/logo.png" alt=""></a>
+            <a href="index.html"><img src="img/core-img/logo2.png" alt=""></a>
         </div>
 
         <!-- Navbar Area -->
@@ -181,7 +181,7 @@
         <div class="close-icon">
             <i class="fa fa-times"></i>
         </div>
-        
+
         <h4>Treading Post</h4>
 
         <!-- Single Blog Post -->
