--- a/app/app/views/homepage/home.html.erb
+++ b/app/app/views/homepage/home.html.erb
@@ -24,13 +24,256 @@
 <!-- ##### Hero Area End ##### -->
 
 <!-- ##### Catagory Area Start ##### -->
-<div class="post-catagory section-padding-100-0 mb-70">
-  <div class="container">
-    <h3 class="custom-h3 mb-30">Recommended</h3>
-    <div class="row justify-content-center">
-      <!-- Single Post Catagory -->
-      <%= render 'recipes/recipe_list', recipes: @recipes %>
-    </div>
-  </div>
+	<div class="container penci_sidebar right-sidebar" style="transform: none;">
+		<div id="main" class="penci-layout-grid-2 penci-main-sticky-sidebar" style="position: relative; overflow: visible; box-sizing: border-box; min-height: 1px;">
+			<div class="theiaStickySidebar" style="padding-top: 0px; padding-bottom: 1px; position: static;">
+        <div class="penci-border-arrow penci-homepage-title penci-home-latest-posts style-2 pcalign-left">
+					<h3 class="inner-arrow">Bài đăng mới nhất</h3>
+				</div>
+				<div class="penci-wrapper-posts-content">
+          <%= render 'recipes/recipe_list', recipes: @recipes %>
+        </div>
+
+			  <section class="home-featured-cat mag-cat-style-3">
+					<div class="penci-border-arrow penci-homepage-title penci-home-latest-posts style-2 pcalign-left">
+            <h3 class="inner-arrow">Bánh ngọt</h3>
+			  	</div>
+				  <div class="home-featured-cat-content style-3">
+
+<div class="mag-photo">
+	<div class="magcat-thumb">
+				<a href="https://www.esheepkitchen.com/love-yourself-cach-lam-banh-chuoi-nuong-chocolate-love-yourself-qua-tang-giveaway-valentines-day-cho-hoi-f-a/" class="mag-overlay-photo"></a>
+				<a class="penci-image-holder" style="background-image: url(&#39;https://www.esheepkitchen.com/wp-content/themes/soledad/images/no-image.jpg&#39;);" href="https://www.esheepkitchen.com/love-yourself-cach-lam-banh-chuoi-nuong-chocolate-love-yourself-qua-tang-giveaway-valentines-day-cho-hoi-f-a/" title="/LOVE YOURSELF/ CÁCH LÀM BÁNH CHUỐI NƯỚNG CHOCOLATE “LOVE YOURSELF” &amp; QUÀ TẶNG GIVEAWAY VALENTINE’s DAY cho hội F.A">
+		</a>
+						<div class="magcat-detail">
+			<h3 class="magcat-titlte"><a href="https://www.esheepkitchen.com/love-yourself-cach-lam-banh-chuoi-nuong-chocolate-love-yourself-qua-tang-giveaway-valentines-day-cho-hoi-f-a/">/LOVE YOURSELF/ CÁCH LÀM BÁNH CHUỐI NƯỚNG CHOCOLATE “LOVE YOURSELF” &amp; QUÀ TẶNG GIVEAWAY VALENTINE’s DAY cho hội F.A</a></h3>
+							<div class="grid-post-box-meta mag-meta">
+																<span>February 14, 2020</span>
+									</div>
+					</div>
+	</div>
 </div>
-<!-- ##### Catagory Area End ##### --> 
+<div class="mag-photo">
+	<div class="magcat-thumb">
+				<a href="https://www.esheepkitchen.com/valentines-day-cach-lam-coco-brownie-hoan-hao-nhu-crush-cua-ban/" class="mag-overlay-photo"></a>
+				<a class="penci-image-holder" style="background-image: url(&#39;https://i0.wp.com/www.esheepkitchen.com/wp-content/uploads/2020/02/1-5.jpg?resize=585%2C390&amp;ssl=1&#39;);" href="https://www.esheepkitchen.com/valentines-day-cach-lam-coco-brownie-hoan-hao-nhu-crush-cua-ban/" title="VALENTINE’S DAY: CÁCH LÀM COCO-BROWNIE HOÀN HẢO NHƯ CRUSH CỦA BẠN">
+		</a>
+																							<div class="magcat-detail">
+			<h3 class="magcat-titlte"><a href="https://www.esheepkitchen.com/valentines-day-cach-lam-coco-brownie-hoan-hao-nhu-crush-cua-ban/">VALENTINE’S DAY: CÁCH LÀM COCO-BROWNIE HOÀN HẢO NHƯ CRUSH CỦA BẠN</a></h3>
+							<div class="grid-post-box-meta mag-meta">
+																<span>February 12, 2020</span>
+									</div>
+					</div>
+	</div>
+</div>
+<div class="mag-photo">
+	<div class="magcat-thumb">
+				<a href="https://www.esheepkitchen.com/summer-cheesecake-no-baked/" class="mag-overlay-photo"></a>
+				<a class="penci-image-holder" style="background-image: url(&#39;https://i2.wp.com/www.esheepkitchen.com/wp-content/uploads/2019/06/man-1.jpg?resize=585%2C390&amp;ssl=1&#39;);" href="https://www.esheepkitchen.com/summer-cheesecake-no-baked/" title="SUMMER CHEESECAKE (NO-BAKED)">
+		</a>
+																							<div class="magcat-detail">
+			<h3 class="magcat-titlte"><a href="https://www.esheepkitchen.com/summer-cheesecake-no-baked/">SUMMER CHEESECAKE (NO-BAKED)</a></h3>
+							<div class="grid-post-box-meta mag-meta">
+																<span>June 16, 2019</span>
+									</div>
+					</div>
+	</div>
+</div>
+<div class="mag-photo">
+	<div class="magcat-thumb">
+				<a href="https://www.esheepkitchen.com/cach-lam-bizcocho-de-limon-banh-truyen-thong-tay-ban-nha/" class="mag-overlay-photo"></a>
+				<a class="penci-image-holder" style="background-image: url(&#39;https://i1.wp.com/www.esheepkitchen.com/wp-content/uploads/2019/03/bizeno.jpg?resize=585%2C390&amp;ssl=1&#39;);" href="https://www.esheepkitchen.com/cach-lam-bizcocho-de-limon-banh-truyen-thong-tay-ban-nha/" title="CÁCH LÀM BIZCOCHO DE LIMÓN BÁNH TRUYỀN THỐNG TÂY BAN NHA">
+		</a>
+																							<div class="magcat-detail">
+			<h3 class="magcat-titlte"><a href="https://www.esheepkitchen.com/cach-lam-bizcocho-de-limon-banh-truyen-thong-tay-ban-nha/">CÁCH LÀM BIZCOCHO DE LIMÓN&nbsp;BÁNH TRUYỀN THỐNG TÂY BAN NHA</a></h3>
+							<div class="grid-post-box-meta mag-meta">
+																<span>January 3, 2019</span>
+									</div>
+					</div>
+	</div>
+</div>																</div>
+
+
+
+						</section>
+
+											<section class="home-featured-cat mag-cat-style-1">
+							<div class="penci-border-arrow penci-homepage-title penci-magazine-title style-2 pcalign-center">
+					<h3 class="inner-arrow"><a href="https://www.esheepkitchen.com/category/inspiration/ky-uc-ha-noi/">Ký ức Hà Nội</a></h3>
+				</div>
+				<div class="home-featured-cat-content style-1">
+																	<div class="cat-left"><div class="mag-post-box first-post">
+	<div class="magcat-thumb">
+						<a class="penci-image-holder" style="background-image: url(&#39;https://i0.wp.com/www.esheepkitchen.com/wp-content/uploads/2020/02/28-1.jpg?resize=533%2C390&amp;ssl=1&#39;);" href="https://www.esheepkitchen.com/mon-ngon-dan-da-ngay-xuan-cach-lam-banh-duc-lac-bang-chao-bep-tu/" title="Món ngon dân dã ngày xuân – CÁCH LÀM BÁNH ĐÚC LẠC BẰNG CHẢO &amp; BẾP TỪ">
+		</a>
+																						</div>
+	<div class="magcat-detail">
+		<div class="mag-header">		<h3 class="magcat-titlte"><a href="https://www.esheepkitchen.com/mon-ngon-dan-da-ngay-xuan-cach-lam-banh-duc-lac-bang-chao-bep-tu/">Món ngon dân dã ngày xuân – CÁCH LÀM BÁNH ĐÚC LẠC BẰNG CHẢO &amp; BẾP TỪ</a></h3>
+							<div class="grid-post-box-meta mag-meta">
+																<span>February 6, 2020</span>
+									</div>
+					</div>			</div>
+</div>
+</div><div class="cat-right"><div class="mag-post-box">
+	<div class="magcat-thumb">
+						<a class="penci-image-holder small-fix-size" style="background-image: url(&#39;https://i1.wp.com/www.esheepkitchen.com/wp-content/uploads/2019/10/48907300617_cca921e18a_k.jpg?resize=585%2C390&amp;ssl=1&#39;);" href="https://www.esheepkitchen.com/cach-lam-nom-banh-duc/" title="CÁCH LÀM NỘM BÁNH ĐÚC">
+		</a>
+																						</div>
+	<div class="magcat-detail">
+				<h3 class="magcat-titlte"><a href="https://www.esheepkitchen.com/cach-lam-nom-banh-duc/">CÁCH LÀM NỘM BÁNH ĐÚC</a></h3>
+							<div class="grid-post-box-meta mag-meta">
+																<span>October 16, 2019</span>
+									</div>
+								</div>
+</div>
+<div class="mag-post-box">
+	<div class="magcat-thumb">
+						<a class="penci-image-holder small-fix-size" style="background-image: url(&#39;https://i0.wp.com/www.esheepkitchen.com/wp-content/uploads/2019/10/6.jpg?resize=585%2C390&amp;ssl=1&#39;);" href="https://www.esheepkitchen.com/24h-ho-hen-voi-mua-thu-ha-noi/" title="24H HÒ HẸN VỚI MÙA THU HÀ NỘI">
+		</a>
+																						</div>
+	<div class="magcat-detail">
+				<h3 class="magcat-titlte"><a href="https://www.esheepkitchen.com/24h-ho-hen-voi-mua-thu-ha-noi/">24H HÒ HẸN VỚI MÙA THU HÀ NỘI</a></h3>
+							<div class="grid-post-box-meta mag-meta">
+																<span>October 14, 2019</span>
+									</div>
+								</div>
+</div>
+<div class="mag-post-box">
+	<div class="magcat-thumb">
+						<a class="penci-image-holder small-fix-size" style="background-image: url(&#39;https://i0.wp.com/www.esheepkitchen.com/wp-content/uploads/2019/09/IMG_1922.jpg?resize=585%2C390&amp;ssl=1&#39;);" href="https://www.esheepkitchen.com/cach-lam-bap-xao-tep-mot-thoi-de-nho/" title="CÁCH LÀM BẮP XÀO TÉP “MỘT THỜI ĐỂ NHỚ”">
+		</a>
+																						</div>
+	<div class="magcat-detail">
+				<h3 class="magcat-titlte"><a href="https://www.esheepkitchen.com/cach-lam-bap-xao-tep-mot-thoi-de-nho/">CÁCH LÀM BẮP XÀO TÉP “MỘT THỜI ĐỂ NHỚ”</a></h3>
+							<div class="grid-post-box-meta mag-meta">
+																<span>September 25, 2019</span>
+									</div>
+								</div>
+</div>
+<div class="mag-post-box">
+	<div class="magcat-thumb">
+						<a class="penci-image-holder small-fix-size" style="background-image: url(&#39;https://i1.wp.com/www.esheepkitchen.com/wp-content/uploads/2019/05/mam3.jpg?resize=585%2C390&amp;ssl=1&#39;);" href="https://www.esheepkitchen.com/cach-lam-mam-tep-chung-top-mo-thit-bam/" title="CÁCH LÀM MẮM TÉP CHƯNG TÓP MỠ THỊT BĂM">
+		</a>
+																						</div>
+	<div class="magcat-detail">
+				<h3 class="magcat-titlte"><a href="https://www.esheepkitchen.com/cach-lam-mam-tep-chung-top-mo-thit-bam/">CÁCH LÀM MẮM TÉP CHƯNG TÓP MỠ THỊT BĂM</a></h3>
+							<div class="grid-post-box-meta mag-meta">
+																<span>May 10, 2019</span>
+									</div>
+								</div>
+</div>
+</div>																</div>
+
+
+
+						</section>
+
+      </div>
+    </div>
+
+<div id="sidebar" class="penci-sidebar-content style-4 pcalign-center penci-sticky-sidebar" style="position: relative; overflow: visible; box-sizing: border-box; min-height: 1px;">
+	<div class="theiaStickySidebar" style="padding-top: 0px; padding-bottom: 1px; position: static;">
+		<aside id="penci_about_widget-4" class="widget penci_about_widget">
+    <h4 class="widget-title penci-border-arrow">
+      <span class="inner-arrow">Author</span>
+    </h4>
+			<div class="about-widget pc_aligncenter">
+																				<img class="penci-widget-about-image holder-square penci-lazy" src="/assets/core-img/logo2.png" alt="Author" style="border-radius: 50%; display: inline;">
+									<p>Căn Bếp nhà Esheep. Góc nhỏ mày mò chia sẻ công thức nấu ăn, làm bánh, review đồ bếp. Chia sẻ tình yêu gia đình, bếp, vườn, chụp ảnh, du lịch...</p>
+			</div>
+			</aside><aside id="penci_social_widget-2" class="widget penci_social_widget"><h4 class="widget-title penci-border-arrow"><span class="inner-arrow">Liên hệ với tôi</span></h4>
+			<div class="widget-social pc_aligncenter">
+									<a href="#" target="_blank"><i class="fab fa-facebook-f" style="font-size: 15px"></i><span style="font-size: 13px">Facebook</span></a>
+									<a href="#" target="_blank"><i class="fab fa-instagram" style="font-size: 15px"></i><span style="font-size: 13px">Instagram</span></a>
+									<a href="#" target="_blank"><i class="fab fa-youtube" style="font-size: 15px"></i><span style="font-size: 13px">Youtube</span></a>
+									<a href="#"><i class="far fa-envelope" style="font-size: 15px"></i><span style="font-size: 13px">Email</span></a>
+							</div>
+
+			</aside>
+
+
+
+
+
+
+
+      <aside id="penci_popular_news_widget-2" class="widget penci_popular_news_widget">
+        <h4 class="widget-title penci-border-arrow"><span class="inner-arrow">Bài đăng nổi bật</span></h4>
+				  <ul class="side-newsfeed display-order-numbers recipe-item">
+          	<%= render 'recipes/recipe_side', recipes: @recipes_side %>
+					</ul>
+			</aside>
+
+
+      <aside id="penci_facebook_widget-2" class="widget penci_facebook_widget">
+				<h4 class="widget-title penci-border-arrow">
+					<span class="inner-arrow">Facebook</span>
+				</h4>
+				<div class="fb-page fb_iframe_widget" data-href="https://www.facebook.com/esheepkitchenvn/" data-height="290" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true" fb-xfbml-state="rendered" fb-iframe-plugin-query="adapt_container_width=true&amp;app_id=&amp;container_width=340&amp;height=290&amp;hide_cover=false&amp;href=https%3A%2F%2Fwww.facebook.com%2Fesheepkitchenvn%2F&amp;locale=en_US&amp;sdk=joey&amp;show_facepile=true&amp;show_posts=true&amp;small_header=false">
+					<span style="vertical-align: bottom; width: 340px; height: 290px;">
+						<iframe width="1000px" height="290px" data-testid="fb:page Facebook Social Plugin" title="fb:page Facebook Social Plugin" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" style="border: none; visibility: visible; width: 340px; height: 290px;"></iframe>
+					</span>
+				</div>
+			</aside>
+
+			<aside id="custom_html-4" class="widget_text widget widget_custom_html">
+			<div class="textwidget custom-html-widget">
+				<aside id="text-3" class="widget widget_text">
+				<h4 class="widget-title penci-border-arrow"><span class="inner-arrow">Youtube</span></h4><div class="textwidget"><p><div class="fluid-width-video-wrapper" style="padding-top: 50%;"><iframe src="./esheep_files/JYr1_oUKylo.html" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="" name="fitvid0"></iframe></div><br> <div class="fluid-width-video-wrapper" style="padding-top: 50%;"><iframe src="./esheep_files/3sUGdyKhLBk.html" frameborder="0" allowfullscreen="" name="fitvid1"></iframe></div> <br> <div class="fluid-width-video-wrapper" style="padding-top: 50%;"><iframe src="./esheep_files/YkLe0nZPiPE.html" frameborder="0" allowfullscreen="" name="fitvid2"></iframe></div></p></div></aside></div></aside><aside id="jr_insta_slider-5" class="widget jr-insta-slider"><h4 class="widget-title penci-border-arrow"><span class="inner-arrow">INSTAGRAM</span></h4>Instagram requires authorization to view a user profile. Use autorized account in widget settings</aside><aside id="categories-5" class="widget widget_categories"><h4 class="widget-title penci-border-arrow"><span class="inner-arrow">Danh mục</span></h4>		<ul>
+				<li class="cat-item cat-item-19"><a href="https://www.esheepkitchen.com/category/biblelicious/">Biblelicious <span class="category-item-count">(23)</span></a>
+<ul class="children">
+	<li class="cat-item cat-item-8"><a href="https://www.esheepkitchen.com/category/biblelicious/kitchen-tips-tricks/">Mẹo vặt <span class="category-item-count">(10)</span></a>
+</li>
+</ul>
+</li>
+	<li class="cat-item cat-item-15"><a href="https://www.esheepkitchen.com/category/inspiration/">Cảm hứng sống <span class="category-item-count">(51)</span></a>
+<ul class="children">
+	<li class="cat-item cat-item-139"><a href="https://www.esheepkitchen.com/category/inspiration/goc-nho-esheep/">Góc nhỏ Esheep <span class="category-item-count">(21)</span></a>
+</li>
+	<li class="cat-item cat-item-17"><a href="https://www.esheepkitchen.com/category/inspiration/ky-uc-ha-noi/">Ký ức Hà Nội <span class="category-item-count">(21)</span></a>
+</li>
+	<li class="cat-item cat-item-201"><a href="https://www.esheepkitchen.com/category/inspiration/nhat-ki-xay-mo/">Nhật kí xây mơ <span class="category-item-count">(8)</span></a>
+</li>
+</ul>
+</li>
+	<li class="cat-item cat-item-138"><a href="https://www.esheepkitchen.com/category/recipe/">Công Thức <span class="category-item-count">(132)</span></a>
+<ul class="children">
+	<li class="cat-item cat-item-13"><a href="https://www.esheepkitchen.com/category/recipe/bread/">Bánh mì <span class="category-item-count">(3)</span></a>
+</li>
+	<li class="cat-item cat-item-4"><a href="https://www.esheepkitchen.com/category/recipe/cakes-and-sweet-treats/">Bánh ngọt <span class="category-item-count">(25)</span></a>
+</li>
+	<li class="cat-item cat-item-10"><a href="https://www.esheepkitchen.com/category/recipe/breakfast/">Breakfast <span class="category-item-count">(4)</span></a>
+</li>
+	<li class="cat-item cat-item-6"><a href="https://www.esheepkitchen.com/category/recipe/drink/">Đồ uống <span class="category-item-count">(15)</span></a>
+</li>
+	<li class="cat-item cat-item-9"><a href="https://www.esheepkitchen.com/category/recipe/appetizers/">Khai vị <span class="category-item-count">(10)</span></a>
+</li>
+	<li class="cat-item cat-item-20"><a href="https://www.esheepkitchen.com/category/recipe/korean-food/">Korean Food <span class="category-item-count">(7)</span></a>
+</li>
+	<li class="cat-item cat-item-11"><a href="https://www.esheepkitchen.com/category/recipe/main-dishes/">Món chính <span class="category-item-count">(20)</span></a>
+</li>
+	<li class="cat-item cat-item-12"><a href="https://www.esheepkitchen.com/category/recipe/side-dishes/">Món phụ <span class="category-item-count">(15)</span></a>
+</li>
+	<li class="cat-item cat-item-3"><a href="https://www.esheepkitchen.com/category/recipe/dessert/">Món tráng miệng <span class="category-item-count">(17)</span></a>
+</li>
+	<li class="cat-item cat-item-14"><a href="https://www.esheepkitchen.com/category/recipe/vietnamese-cuisine/">Món Việt Nam <span class="category-item-count">(40)</span></a>
+</li>
+</ul>
+</li>
+	<li class="cat-item cat-item-161"><a href="https://www.esheepkitchen.com/category/cookbook/">Cookbook <span class="category-item-count">(5)</span></a>
+</li>
+	<li class="cat-item cat-item-129"><a href="https://www.esheepkitchen.com/category/goc-review/">Góc Review <span class="category-item-count">(12)</span></a>
+</li>
+	<li class="cat-item cat-item-194"><a href="https://www.esheepkitchen.com/category/group-yeu-bep/">Group Yêu Bếp <span class="category-item-count">(14)</span></a>
+</li>
+	<li class="cat-item cat-item-106"><a href="https://www.esheepkitchen.com/category/travel/">Travel <span class="category-item-count">(16)</span></a>
+</li>
+	<li class="cat-item cat-item-1"><a href="https://www.esheepkitchen.com/category/uncategorized/">Uncategorized <span class="category-item-count">(2)</span></a>
+</li>
+		</ul>
+			</aside>	</div>
+</div>
+
+
+  </div>
+<!-- ##### Catagory Area End ##### -->
