--- a/app/app/views/recipes/_recipe_item.html.erb
+++ b/app/app/views/recipes/_recipe_item.html.erb
@@ -1,7 +1,10 @@
 <style>
 .recipe-image {
-  height: 200px;
+  height: 220px;
   overflow: hidden;
+}
+.recipe-image:hover {
+  opacity: 0.8;
 }
 .recipe-image img {
   min-width:  100%;
@@ -9,7 +12,7 @@
   object-fit:cover;
 }
 </style>
-<div class="recipe-item col-12 col-sm-4 col-md-3 mb-5">
+<div class="recipe-item col-12 col-sm-6 col-md-6 mb-5">
   <a href="<%= recipe.is_premium? && !current_user&.is_premium? ? premium_info_path : recipe_path(recipe) %>" class="recipe-name">
     <div class="recipe-image full-width p-relative">
       <img src="<%= recipe.image %>" alt="">
@@ -32,6 +35,7 @@
           <span>(<%= recipe.get_rate_times ? recipe.get_rate_times : "0" %> rating)</span>
         </p>
       </div>
+
       <% if user_signed_in? %>
         <div class="col-md-3">
           <i class="recipe-bookmark text-danger recipe-name <%= current_user.bookmarks.where(recipe_id: recipe.id).first.nil? ? " far " : "fas " %> fa-heart fa-2x" data-recipe_id="<%= recipe.id %>" style="cursor: pointer"></i>
@@ -39,5 +43,20 @@
       <% end %>
     </div>
     <a href="<%= recipe.is_premium? && !current_user&.is_premium? ? premium_info_path : recipe_path(recipe) %>" class="recipe-name mt-0"><%= recipe.name %></a>
+    <p style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;width:300px" href="<%= recipe.is_premium? && !current_user&.is_premium? ? premium_info_path : recipe_path(recipe) %>" class="recipe-name mt-0"><%= recipe.recipe %></p>
+  </div>
+
+  <div class="grid-post-box-meta">
+    <span class="author-italic">by <a href="#">Esheep Kitchen</a></span>
+    <span><%= recipe.created_at.strftime("%b %d, %Y") %></span>
+  </div>
+
+  <div class="penci-post-box-meta penci-post-box-grid">
+    <div class="penci-post-share-box">
+					<a target="_blank" href="#"><i class="fab fa-facebook-f"></i><span class="dt-share">Facebook</span></a>
+					<a target="_blank" href="#"><i class="fab fa-twitter"></i><span class="dt-share">Twitter</span></a>
+					<a target="_blank" href="#"><i class="fab fa-google-plus-g"></i><span class="dt-share">Google +</span></a>
+					<a data-pin-do="none" target="_blank" href="#"><i class="fab fa-pinterest-p"></i><span class="dt-share">Pinterest</span></a>
+    </div>
   </div>
 </div>
