--- a/app/app/assets/stylesheets/classy-nav.css
+++ b/app/app/assets/stylesheets/classy-nav.css
@@ -37,7 +37,7 @@ img {
 .classy-nav-container {
   position: relative;
   z-index: 100;
-  background-color: #ddd;
+  background-color: #3d3d3d;
   /* sticky */ }
   .classy-nav-container * {
     box-sizing: border-box; }
