--- a/app/app/views/template/contact.html.erb
+++ b/app/app/views/template/contact.html.erb
@@ -1,173 +1,4 @@
-<!-- ##### Treading Post Area Start ##### -->
-<div class="treading-post-area" id="treadingPost">
-  <div class="close-icon">
-    <i class="fa fa-times"></i>
-  </div>
-
-  <h4>Treading Post</h4>
-
-  <!-- Single Blog Post -->
-  <div class="single-blog-post style-1 d-flex flex-wrap mb-30">
-    <!-- Blog Thumbnail -->
-    <div class="blog-thumbnail">
-      <img src="assets/bg-img/9.jpg" alt="">
-    </div>
-    <!-- Blog Content -->
-    <div class="blog-content">
-      <a href="#" class="post-tag">The Best</a>
-      <a href="#" class="post-title">Friend eggs with ham</a>
-      <div class="post-meta">
-        <a href="#" class="post-date">July 11, 2018</a>
-        <a href="#" class="post-author">By Julia Stiles</a>
-      </div>
-    </div>
-  </div>
-
-  <!-- Single Blog Post -->
-  <div class="single-blog-post style-1 d-flex flex-wrap mb-30">
-    <!-- Blog Thumbnail -->
-    <div class="blog-thumbnail">
-      <img src="assets/bg-img/10.jpg" alt="">
-    </div>
-    <!-- Blog Content -->
-    <div class="blog-content">
-      <a href="#" class="post-tag">The Best</a>
-      <a href="#" class="post-title">Mushrooms with pork chop</a>
-      <div class="post-meta">
-        <a href="#" class="post-date">July 11, 2018</a>
-        <a href="#" class="post-author">By Julia Stiles</a>
-      </div>
-    </div>
-  </div>
-
-  <!-- Single Blog Post -->
-  <div class="single-blog-post style-1 d-flex flex-wrap mb-30">
-    <!-- Blog Thumbnail -->
-    <div class="blog-thumbnail">
-      <img src="assets/bg-img/11.jpg" alt="">
-    </div>
-    <!-- Blog Content -->
-    <div class="blog-content">
-      <a href="#" class="post-tag">The Best</a>
-      <a href="#" class="post-title">Birthday cake with chocolate</a>
-      <div class="post-meta">
-        <a href="#" class="post-date">July 11, 2018</a>
-        <a href="#" class="post-author">By Julia Stiles</a>
-      </div>
-    </div>
-  </div>
-
-  <!-- Single Blog Post -->
-  <div class="single-blog-post style-1 d-flex flex-wrap mb-30">
-    <!-- Blog Thumbnail -->
-    <div class="blog-thumbnail">
-      <img src="assets/bg-img/9.jpg" alt="">
-    </div>
-    <!-- Blog Content -->
-    <div class="blog-content">
-      <a href="#" class="post-tag">The Best</a>
-      <a href="#" class="post-title">Friend eggs with ham</a>
-      <div class="post-meta">
-        <a href="#" class="post-date">July 11, 2018</a>
-        <a href="#" class="post-author">By Julia Stiles</a>
-      </div>
-    </div>
-  </div>
-
-  <!-- Single Blog Post -->
-  <div class="single-blog-post style-1 d-flex flex-wrap mb-30">
-    <!-- Blog Thumbnail -->
-    <div class="blog-thumbnail">
-      <img src="assets/bg-img/10.jpg" alt="">
-    </div>
-    <!-- Blog Content -->
-    <div class="blog-content">
-      <a href="#" class="post-tag">The Best</a>
-      <a href="#" class="post-title">Mushrooms with pork chop</a>
-      <div class="post-meta">
-        <a href="#" class="post-date">July 11, 2018</a>
-        <a href="#" class="post-author">By Julia Stiles</a>
-      </div>
-    </div>
-  </div>
-
-  <!-- Single Blog Post -->
-  <div class="single-blog-post style-1 d-flex flex-wrap mb-30">
-    <!-- Blog Thumbnail -->
-    <div class="blog-thumbnail">
-      <img src="assets/bg-img/11.jpg" alt="">
-    </div>
-    <!-- Blog Content -->
-    <div class="blog-content">
-      <a href="#" class="post-tag">The Best</a>
-      <a href="#" class="post-title">Birthday cake with chocolate</a>
-      <div class="post-meta">
-        <a href="#" class="post-date">July 11, 2018</a>
-        <a href="#" class="post-author">By Julia Stiles</a>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- ##### Treading Post Area End ##### -->
-
-<!-- ##### Search Area Start ##### -->
-<div class="bueno-search-area section-padding-100-0 pb-70 bg-img"
-  style="background-image: url(assets/core-img/pattern.png);">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <form action="#" method="post">
-          <div class="row">
-            <div class="col-12 col-sm-6 col-lg-3">
-              <div class="form-group mb-30">
-                <select class="form-control" id="recipe">
-                  <option value="">Recipe</option>
-                  <option value="">Recipe 1</option>
-                  <option value="">Recipe 2</option>
-                  <option value="">Recipe 3</option>
-                  <option value="">Recipe 4</option>
-                </select>
-              </div>
-            </div>
-
-            <div class="col-12 col-sm-6 col-lg-3">
-              <div class="form-group mb-30">
-                <select class="form-control" id="vegan">
-                  <option value="">Vegan</option>
-                  <option value="">Vegan 1</option>
-                  <option value="">Vegan 2</option>
-                  <option value="">Vegan 3</option>
-                  <option value="">Vegan 4</option>
-                </select>
-              </div>
-            </div>
-
-            <div class="col-12 col-sm-6 col-lg-3">
-              <div class="form-group mb-30">
-                <select class="form-control" id="ingredients">
-                  <option value="">Ingredients</option>
-                  <option value="">Ingredients 1</option>
-                  <option value="">Ingredients 2</option>
-                  <option value="">Ingredients 3</option>
-                  <option value="">Ingredients 4</option>
-                </select>
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3">
-              <div class="form-group mb-30">
-                <button class="btn bueno-btn w-100">Search</button>
-              </div>
-            </div>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- ##### Search Area End ##### -->
-
-<!-- ##### Contact Area Start ##### -->
-<section class="contact-area section-padding-100">
+<section class="contact-area section-padding-100" style="border-top:1px solid #ECECEC">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12 col-lg-8 col-xl-9">
@@ -208,237 +39,13 @@
               <!-- ##### Google Maps ##### -->
               <div class="map-area">
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22236.40558254599!2d-118.25292394686001!3d34.057682914027104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2z4Kay4Ka4IOCmj-CmnuCnjeCmnOCnh-CmsuCnh-CmuCwg4KaV4KeN4Kav4Ka-4Kay4Ka_4Kar4KeL4Kaw4KeN4Kao4Ka_4Kav4Ka84Ka-LCDgpq7gpr7gprDgp43gppXgpr_gpqgg4Kav4KeB4KaV4KeN4Kak4Kaw4Ka-4Ka34KeN4Kaf4KeN4Kaw!5e0!3m2!1sbn!2sbd!4v1532328708137"
-                  allowfullscreen></iframe>
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.0977424815455!2d105.8501706501119!3d21.028774735929655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab953357c995%3A0x1babf6bb4f9a20e!2zSOG7kyBIb8OgbiBLaeG6v20!5e0!3m2!1svi!2s!4v1585726341788!5m2!1svi!2s" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+                </iframe>
               </div>
             </div>
-          </div>
-
-          <!-- Contact Form Area -->
-          <div class="contact-form-area mb-70">
-            <h4 class="mb-50">Get In Touch</h4>
-
-            <form action="#" method="post">
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="form-group">
-                    <input type="text" class="form-control" id="name" placeholder="Name">
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="form-group">
-                    <input type="email" class="form-control" id="email" placeholder="E-mail">
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="form-group">
-                    <textarea name="message" class="form-control" id="message" cols="30" rows="10"
-                      placeholder="Message"></textarea>
-                  </div>
-                </div>
-                <div class="col-12">
-                  <button class="btn bueno-btn mt-30" type="submit">Send</button>
-                </div>
-              </div>
-            </form>
-          </div>
-
-        </div>
-      </div>
-
-      <div class="col-12 col-sm-9 col-md-6 col-lg-4 col-xl-3">
-        <div class="sidebar-area">
-
-          <!-- Single Widget Area -->
-          <div class="single-widget-area author-widget mb-30">
-            <div class="background-pattern bg-img" style="background-image: url(assets/core-img/pattern2.png);">
-              <div class="author-thumbnail">
-                <img src="assets/bg-img/23.jpg" alt="">
-              </div>
-              <p>My name is <span>Jessica Smith</span>, I’m a passionate cook with a love for vegan food.</p>
-            </div>
-            <div class="social-info">
-              <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-              <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-              <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-            </div>
-          </div>
-
-          <!-- Single Widget Area -->
-          <div class="single-widget-area add-widget mb-30">
-            <img src="assets/bg-img/add.png" alt="">
-          </div>
-
-          <!-- Single Widget Area -->
-          <div class="single-widget-area post-widget mb-30">
-            <!-- Single Post Area -->
-            <div class="single-post-area d-flex">
-              <!-- Blog Thumbnail -->
-              <div class="blog-thumbnail">
-                <img src="assets/bg-img/12.jpg" alt="">
-              </div>
-              <!-- Blog Content -->
-              <div class="blog-content">
-                <a href="#" class="post-title">Friend eggs with ham</a>
-                <div class="post-meta">
-                  <a href="#" class="post-date">July 11, 2018</a>
-                  <a href="#" class="post-author">By Julia Stiles</a>
-                </div>
-              </div>
-            </div>
-
-            <!-- Single Post Area -->
-            <div class="single-post-area d-flex">
-              <!-- Blog Thumbnail -->
-              <div class="blog-thumbnail">
-                <img src="assets/bg-img/13.jpg" alt="">
-              </div>
-              <!-- Blog Content -->
-              <div class="blog-content">
-                <a href="#" class="post-title">Burger with fries</a>
-                <div class="post-meta">
-                  <a href="#" class="post-date">July 11, 2018</a>
-                  <a href="#" class="post-author">By Julia Stiles</a>
-                </div>
-              </div>
-            </div>
-
-            <!-- Single Post Area -->
-            <div class="single-post-area d-flex">
-              <!-- Blog Thumbnail -->
-              <div class="blog-thumbnail">
-                <img src="assets/bg-img/14.jpg" alt="">
-              </div>
-              <!-- Blog Content -->
-              <div class="blog-content">
-                <a href="#" class="post-title">Avocado &amp; Oisters</a>
-                <div class="post-meta">
-                  <a href="#" class="post-date">July 11, 2018</a>
-                  <a href="#" class="post-author">By Julia Stiles</a>
-                </div>
-              </div>
-            </div>
-
-            <!-- Single Post Area -->
-            <div class="single-post-area d-flex">
-              <!-- Blog Thumbnail -->
-              <div class="blog-thumbnail">
-                <img src="assets/bg-img/15.jpg" alt="">
-              </div>
-              <!-- Blog Content -->
-              <div class="blog-content">
-                <a href="#" class="post-title">Tortilla prawns</a>
-                <div class="post-meta">
-                  <a href="#" class="post-date">July 11, 2018</a>
-                  <a href="#" class="post-author">By Julia Stiles</a>
-                </div>
-              </div>
-            </div>
-
-            <!-- Single Post Area -->
-            <div class="single-post-area d-flex">
-              <!-- Blog Thumbnail -->
-              <div class="blog-thumbnail">
-                <img src="assets/bg-img/16.jpg" alt="">
-              </div>
-              <!-- Blog Content -->
-              <div class="blog-content">
-                <a href="#" class="post-title">Burger with fries</a>
-                <div class="post-meta">
-                  <a href="#" class="post-date">July 11, 2018</a>
-                  <a href="#" class="post-author">By Julia Stiles</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Single Widget Area -->
-          <div class="single-widget-area newsletter-widget mb-30">
-            <h6>Subscribe to newsletter</h6>
-            <form action="#" method="post">
-              <input type="search" name="widget-search" id="widgetSearch" placeholder="E-mail">
-              <button type="submit" class="btn bueno-btn w-100">Subscribe</button>
-            </form>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </div>
-
       </div>
     </div>
   </div>
 </section>
-<!-- ##### Contact Area End ##### -->
-
-<!-- ##### Instagram Area Start ##### -->
-<div class="instagram-feed-area d-flex flex-wrap">
-  <!-- Single Instagram -->
-  <div class="single-instagram">
-    <img src="assets/bg-img/insta1.jpg" alt="">
-    <!-- Image Zoom -->
-    <a href="assets/bg-img/insta1.jpg" class="img-zoom" title="Instagram Image">+</a>
-  </div>
-
-  <!-- Single Instagram -->
-  <div class="single-instagram">
-    <img src="assets/bg-img/insta2.jpg" alt="">
-    <!-- Image Zoom -->
-    <a href="assets/bg-img/insta2.jpg" class="img-zoom" title="Instagram Image">+</a>
-  </div>
-
-  <!-- Single Instagram -->
-  <div class="single-instagram">
-    <img src="assets/bg-img/insta3.jpg" alt="">
-    <!-- Image Zoom -->
-    <a href="assets/bg-img/insta3.jpg" class="img-zoom" title="Instagram Image">+</a>
-  </div>
-
-  <!-- Single Instagram -->
-  <div class="single-instagram">
-    <img src="assets/bg-img/insta4.jpg" alt="">
-    <!-- Image Zoom -->
-    <a href="assets/bg-img/insta4.jpg" class="img-zoom" title="Instagram Image">+</a>
-  </div>
-
-  <!-- Single Instagram -->
-  <div class="single-instagram">
-    <img src="assets/bg-img/insta5.jpg" alt="">
-    <!-- Image Zoom -->
-    <a href="assets/bg-img/insta5.jpg" class="img-zoom" title="Instagram Image">+</a>
-  </div>
-
-  <!-- Single Instagram -->
-  <div class="single-instagram">
-    <img src="assets/bg-img/insta6.jpg" alt="">
-    <!-- Image Zoom -->
-    <a href="assets/bg-img/insta6.jpg" class="img-zoom" title="Instagram Image">+</a>
-  </div>
-
-  <!-- Single Instagram -->
-  <div class="single-instagram">
-    <img src="assets/bg-img/insta7.jpg" alt="">
-    <!-- Image Zoom -->
-    <a href="assets/bg-img/insta7.jpg" class="img-zoom" title="Instagram Image">+</a>
-  </div>
-
-  <!-- Single Instagram -->
-  <div class="single-instagram">
-    <img src="assets/bg-img/insta8.jpg" alt="">
-    <!-- Image Zoom -->
-    <a href="assets/bg-img/insta8.jpg" class="img-zoom" title="Instagram Image">+</a>
-  </div>
-
-  <!-- Single Instagram -->
-  <div class="single-instagram">
-    <img src="assets/bg-img/insta9.jpg" alt="">
-    <!-- Image Zoom -->
-    <a href="assets/bg-img/insta9.jpg" class="img-zoom" title="Instagram Image">+</a>
-  </div>
-
-  <!-- Single Instagram -->
-  <div class="single-instagram">
-    <img src="assets/bg-img/insta10.jpg" alt="">
-    <!-- Image Zoom -->
-    <a href="assets/bg-img/insta10.jpg" class="img-zoom" title="Instagram Image">+</a>
-  </div>
-</div>
-<!-- ##### Instagram Area End ##### -->
